RESOLVED FIXED314634
[WebXR Layers] Incorrect rendering of layers in https://threejs.org/examples/?q=layers%20n#webgpu_xr_native_layers
https://bugs.webkit.org/show_bug.cgi?id=314634
Summary [WebXR Layers] Incorrect rendering of layers in https://threejs.org/examples/...
Sergio Villar Senin
Reported 2026-05-12 05:01:17 PDT
All layers are rendered pitch black instead of the actual content
Attachments
Radar WebKit Bug Importer
Comment 1 2026-05-19 05:02:12 PDT
Sergio Villar Senin
Comment 2 2026-05-22 08:00:33 PDT
EWS
Comment 3 2026-05-25 07:46:01 PDT
Committed 313843@main (b9704aaeaa38): <https://commits.webkit.org/313843@main> Reviewed commits have been landed. Closing PR #65476 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.