[WebXR Layers] Incorrect rendering of layers in https://threejs.org/examples/?q=layers%20n#webgpu_xr_native_layers https://bugs.webkit.org/show_bug.cgi?id=314634

Reviewed by Dan Glastonbury.

XRQuadLayer, XRCylinderLayer and XREquirectLayer were submitting their
poses to the device with an inverted offset along the Y axis when the
layer was anchored to a reference space whose nativeOrigin is not the
identity (most notably 'local-floor', which is the three.js default).

The reference space's nativeOrigin() returns the transform that maps
from the space's local coordinates into the session's local space, i.e.
spaceTransform * pointInSpace = pointInLocalSpace. To express a layer's
transform in local space we should do:

    layerInLocalSpace = spaceTransform * layerInSpace

recomputePose() was instead doing:

    layerInLocalSpace = inverse(spaceTransform) * layerInSpace

In the threejs specific example the 'local-floor' space had the floor at
Y = -HEIGHT in local space. This flipped the sign of the floor offset and
pushed any layer placed at Y = 0 in local-floor up to Y = +HEIGHT in local
space (above the user's head) instead of the intended Y = -HEIGHT (the
floor). That's why non-projection layers ended up roughly at the room
ceiling and were invisible in the user's natural forward gaze.

XRProjectionLayer was unaffected because it does not go through this
code path. Its per-view poses are obtained from xrLocateViews() and
submitted directly.

No new tests as the bug lives in the conversion from m_transform
(reference-space coords) to m_poseInLocalSpace (the value passed to
Device::submitFrame), and the result is never exposed to JavaScript.

* Source/WebCore/Modules/webxr/XRCylinderLayer.cpp:
(WebCore::XRCylinderLayer::recomputePose):
* Source/WebCore/Modules/webxr/XREquirectLayer.cpp:
(WebCore::XREquirectLayer::recomputePose):
* Source/WebCore/Modules/webxr/XRQuadLayer.cpp:
(WebCore::XRQuadLayer::recomputePose):

Canonical link: https://commits.webkit.org/313843@main